# rust_web_demo

./: Cargo.toml
src/: api_router.rs  lib.rs  main.rs  site_router.rs  template_middleware.rs
views/: index.mustache
